fix: ui job posts, ai not working
